# wawa

./: .gitignore  Cargo.toml  Justfile  README.md  default.nix  flake.nix  logo.ua  shell.nix
.github/workflows/: rust.yml
assets/: glyphlist.txt
src/: backend.rs  check_raw_pad_links.rs  handle_raw_pad_links.rs  handlers.rs  highlighting.rs  lib.rs  main.rs  slash_commands.rs  uiuaizing.rs
src/uiuaizing/: encode.rs
