[package]
name = "wawa"
version = "0.1.0"
edition = "2021"
description = "A discord bot, for uiua!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
serenity = "0.12.2"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
uiua = { version = "0.12.3", default-features = false }
