[package]
name = "wawa"
version = "0.1.0"
edition = "2021"
description = "A discord bot, for uiua!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
lazy_static = "1.5.0"
regex = "1.11.0"
serenity = "0.12.2"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uiua = { version = "0.13.0-rc.2", default-features = false, features = [
    "image",
] }
image = { version = "0.25.4", default-features = false, features = ["png"] }

vorbis_rs = "0.5.4"
