[package]
name = "wawa"
version = "0.1.0"
edition = "2021"
description = "A discord bot, for uiua!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
image = { version = "0.24.9", default-features = false, features = ["png"] }
lazy_static = "1.5.0"
regex = "1.11.0"
serenity = "0.12.2"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uiua = { git = "https://github.com/uiua-lang/uiua", branch = "main", default-features = false, features = ["batteries"] }

vorbis_rs = "0.5.4"
